--- a/section6/tsconfig.json
+++ b/section6/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "moduleDetection": "force",
     "allowJs": true
+    // "noImplicitAny": true
   },
   "include": ["src"]
 }
