--- a/section6/tsconfig.json
+++ b/section6/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "dist",
     "strict": true,
     "moduleDetection": "force",
+    "skipLibCheck": true,
     "allowJs": true
     // "noImplicitAny": true
   },
