--- a/section7/tsconfig.json
+++ b/section7/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "strict": true,
     "moduleDetection": "force",
-    "allowJs": true
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
